# tarea2Datos2

./: README.md
ClientTest/: CMakeLists.txt  DoubleList.hpp  Grafo.hpp  Pintor.h  example.cpp  localserver.cpp  servertest.cpp  servertest.h  widget.cpp  widget.h
LocalClient/: LocalClient.pro  LocalClient.pro.user.4.8-pre1  Pintor.cpp  widget.cpp  widget.ui
LocalServer/: FloydWResponse.cpp  FloydWarshall.cpp  FloydWarshall.h  Grafo.hpp  LocalServer.pro  Response.h  localclient.h  localserver.cpp  localserver.h  widget.cpp  widget.h  widget.ui
ServerTest/: CMakeLists.txt  DoubleList.hpp  DoubleNode.hpp  example.cpp  localclient.cpp  localserver.h  servertest.h
TestClient/: CMakeLists.txt  main.cpp
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ClientTest  build.ninja  cmake_install.cmake  example
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/ClientTest_autogen/: deps  mocs_compilation.cpp
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/ClientTest_autogen/EWIEGA46WW/: moc_Pintor.cpp  moc_Pintor.cpp.d  moc_localserver.cpp  moc_localserver.cpp.d  moc_servertest.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/ClientTest_autogen/include/: ui_widget.h
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/example_autogen/: deps  moc_predefs.h
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/example_autogen/EWIEGA46WW/: moc_localserver.cpp.d  moc_servertest.cpp  moc_servertest.cpp.d
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-build/: CTestTestfile.cmake  cmake_install.cmake
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-build/googletest/: CTestTestfile.cmake  cmake_install.cmake
build-ClientTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-download/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ServerTest  build.ninja  cmake_install.cmake  example
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/ServerTest_autogen/: deps  mocs_compilation.cpp
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/ServerTest_autogen/EWIEGA46WW/: moc_localserver.cpp.d  moc_servertest.cpp  moc_servertest.cpp.d  moc_widget.cpp  moc_widget.cpp.d
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/example_autogen/: deps  mocs_compilation.cpp
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-build/: CTestTestfile.cmake  cmake_install.cmake
build-ServerTest-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-download/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
build-TestClient-Desktop_Qt_5_15_1_GCC_64bit-Debug/: CMakeCache.txt  Makefile  TestClient  cmake_install.cmake
build-TestClient-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-TestClient-Desktop_Qt_5_15_1_GCC_64bit-Debug/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+102 files in other folders)
